<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!--<android.support.design.widget.CollapsingToolbarLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
            <!--app:contentScrim="?attr/colorPrimary"-->
            <!--app:layout_scrollFlags="scroll|exitUntilCollapsed">-->

            <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:scaleType="centerCrop"-->
            <!--app:layout_collapseMode="parallax" />-->

            <android.support.v7.widget.Toolbar
                android:id="@+id/first_code_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
                <!--<android.support.v7.widget.Toolbar-->
                <!--android:id="@+id/first_code_toolbar"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="?attr/actionBarSize"-->
                <!--app:layout_collapseMode="pin">-->

            </android.support.v7.widget.Toolbar>

            <!--</android.support.design.widget.CollapsingToolbarLayout>-->

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nested_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.howdo.myapplication.ui.activity.MainActivity">

                <TextView
                    android:id="@+id/hello"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/demo" />

                <Button
                    android:id="@+id/mix_text_pic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mixturetextview" />

                <Button
                    android:id="@+id/html_demo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/html_demo" />

                <Button
                    android:id="@+id/webview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/webview" />

                <Button
                    android:id="@+id/sd_mounted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sd_mounted" />

                <Button
                    android:id="@+id/byeburgernavigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/byeburgernavigation" />

                <Button
                    android:id="@+id/BGARefreashLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/BGARefreshLayout" />

                <Button
                    android:id="@+id/webview_bga"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/WebViewBGA" />

                <Button
                    android:id="@+id/main_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_tab" />

                <Button
                    android:id="@+id/download_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speed" />

                <Button
                    android:id="@+id/current_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_speed" />

                <Button
                    android:id="@+id/layout_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CoordinatorLayout" />

                <Button
                    android:id="@+id/pinned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pinned" />

                <Button
                    android:id="@+id/dropDowmMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dropDowmMenu" />

                <Button
                    android:id="@+id/bajieDropDownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dropDownMenu2" />

                <Button
                    android:id="@+id/open_camera_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_gallery_camera" />

                <Button
                    android:id="@+id/first_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/first_code" />

                <Button
                    android:id="@+id/broadcast_force_offline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/force_offline" />

                <Button
                    android:id="@+id/baidu_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/baidu_map" />

            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/textSize_18"
            android:elevation="8dp"
            android:src="@mipmap/android"
            app:layout_anchor="@id/nested_scrollView"
            app:layout_anchorGravity="bottom|end" />

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_nav">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>