<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.BroadCastReceiverDemoActivity">


    <Button
        android:id="@+id/btn_send_standard_broadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_standard_broadcat" />

    <Button
        android:id="@+id/btn_send_ordered_broadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_ordered_broadcast" />

    <Button
        android:id="@+id/btn_send_local_broadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_local_broadcast" />
</LinearLayout>